@@ -1,5 +1,5 @@
 //
-// "$Id: Fl_Menu_Bar.cxx,v 1.7.2.6.2.1 2002/01/01 15:11:30 easysw Exp $"
+// "$Id: Fl_Menu_Bar.cxx,v 1.7.2.6.2.2 2002/11/19 18:34:48 easysw Exp $"
 //
 // Menu bar widget for the Fast Light Tool Kit (FLTK).
 //
@@ -25,6 +25,7 @@
 
 #include <FL/Fl.H>
 #include <FL/Fl_Menu_Bar.H>
+#include <FL/fl_draw.H>
 
 void Fl_Menu_Bar::draw() {
   draw_box();
@@ -35,6 +36,16 @@ void Fl_Menu_Bar::draw() {
     int W = m->measure(0,this) + 16;
     m->draw(X, y(), W, h(), this);
     X += W;
+    if (m->flags & FL_MENU_DIVIDER) {
+      int y1 = y() + Fl::box_dy(box());
+      int y2 = y1 + h() - Fl::box_dh(box()) - 1;
+
+      // Draw a vertical divider between menus...
+      fl_color(FL_DARK3);
+      fl_yxline(X - 6, y1, y2);
+      fl_color(FL_LIGHT3);
+      fl_yxline(X - 5, y1, y2);
+    }
   }
 }
 
@@ -61,5 +72,5 @@ int Fl_Menu_Bar::handle(int event) {
 }
 
 //
-// End of "$Id: Fl_Menu_Bar.cxx,v 1.7.2.6.2.1 2002/01/01 15:11:30 easysw Exp $".
+// End of "$Id: Fl_Menu_Bar.cxx,v 1.7.2.6.2.2 2002/11/19 18:34:48 easysw Exp $".
 //
