@@ -1,5 +1,7 @@
 CHANGES IN FLTK 1.1.2
 
+	- Fl_Menu_Bar now supports drawing vertical dividers
+	  between menu items and submenus in the menu bar.
 	- Fl_File_Chooser::value() didn't return NULL when the
 	  user clicked Cancel while selecting a directory.  This
 	  bug also affected fl_dir_chooser().
